src/components/Projects/Projects.scss
@use "../../styles/partials/_mixins.scss" as *;
@use "../../styles/partials/_variables.scss" as *;

.projects {
  padding-top: 64px;
  padding-bottom: 64px;

  &__cta {
    margin-bottom: 2rem;
    text-transform: capitalize;
    font-weight: 400;
  }

  .projects__grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 20px;
    margin-bottom: 32px;

    @media (max-width: 768px) {
      grid-template-columns: repeat(2, 1fr);
    }

    @media (max-width: 767px) {
      grid-template-columns: 1fr;
    }
  }
}

.project {
  position: relative;
  overflow: hidden;
  box-shadow: 0 4px 20px -1px rgb(0 0 0 / 40%);
  border-radius: 8px;

  .content {
    h3 {
      font-size: 32px;

      margin-top: 6px;
      margin-bottom: 12px;

      @include tablet {
        margin-bottom: 15px;
      }

      @include desktop {
        font-size: 36px;

        margin-top: 30px;
        margin-bottom: 20px;
      }
    }

    p {
      font-size: 16px;
      margin-bottom: 16px;

      @include tablet {
        font-size: 18px;
      }

      @include desktop {
        font-size: 20px;
      }
    }

    &__photocard {
      height: 180px;

      @include tablet {
        height: 200px;
      }
      @include desktop {
        height: 250px;
      }
    }

    &__photocard-img {
      width: 100%;
      height: 100%;
      object-fit: cover;
    }

    &__overlay {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      color: $primary-white;
      background: rgba(0, 0, 0, 0.8);
      transition: 0.7s ease-out;
      line-height: 1.4;
      opacity: 0;
    }

    :hover {
      opacity: 1;
    }

    &__photocard-content {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      padding: 1rem;
    }
  }
}

.button {
  display: flex;
  justify-content: space-between;
  gap: 1rem;

  &__link {
    @include button;
    text-align: center;
    font-size: 14px;
    color: $primary-black;
    background-color: $primary-white;

    &:hover {
      color: $primary-white;
      background-color: $primary-black;
      transition: 0.6s ease-out;
    }
  }
}

